--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@ body, html{
     height: 100%;
 }
 div.first-screen-wrapper{
-    height: calc(100vh + 500px);
+    height: calc(100vh + 300px);
 }
 div.first-screen-section{
     text-align: center;
@@ -77,7 +77,7 @@ div.first-screen-section div.upper-text-wrapper .upper-text-cover{
     background: #fff;
 }
 div.first-screen-section div.loading-bar-upper-text{
-    font-size: 25px;
+    font-size: 2em;
     --progress: 0px;
 
     transform: translateY(var(--progress));
