--- a/assets/styles.css
+++ b/assets/styles.css
@@ -87,3 +87,22 @@ div.first-screen-section div.loading-bars{
     display: flex;
     justify-content: space-between;
 }
+
+/* first-screen animation block */
+div.first-screen-section div.background-animation-canvas{
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    z-index: -100;
+}
+div.first-screen-section div.background-animation-canvas div.animation-img{
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+div.first-screen-section div.background-animation-canvas div.animation-img img{
+    width: 50px;
+    height: 50px;
+}
